--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
   gtag('config', 'G-FXMQ61YXZ5');
 </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/logo-only-transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Fredoka Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
     <title>Alternity - Coming Soon</title>
     <meta name="description" content="Something amazing is coming. Stay tuned for an extraordinary digital experience." />
   </head>
