--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <title>Alternity - Coming Soon</title>
+    <title>Alternity - Face Recogniser</title>
     <meta name="description" content="Something amazing is coming. Stay tuned for an extraordinary digital experience." />
   </head>
   <body>
